name:                stlc-infer
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jez/stlc-infer#readme
license:             MIT
license-file:        LICENSE
author:              Jake Zimmerman
maintainer:          zimmerman.jake@gmail.com
copyright:           2017 Jake Zimmerman
category:            Simple
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable stlc-infer
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:
    Stlc.Lexer,
    Stlc.Parser,
    Stlc.Types
  default-language:    Haskell2010
  build-tools:
    alex,
    happy
  build-depends:
    array,
    base >= 4.7 && < 5,
    containers,
    lens,
    mtl,
    unbound-generics
  ghc-options:
    -Wall
    -Wcompat
    -Wmissing-signatures
    -Werror
    -funbox-strict-fields
